--- a/index.css
+++ b/index.css
@@ -9809,7 +9809,8 @@ footer.navbar-border {
   color: #626262; }
 
 .dropdown-notification .notification-title {
-  color: rgba(255, 255, 255, 0.75); }
+  color: rgba(255, 255, 255, 0.75);
+  margin-right: 5px; }
 
 .dropdown-notification .notification-tag {
   position: relative;
@@ -14910,6 +14911,7 @@ html [type="button"],
       width: 26rem;
       left: 10px !important; }
       .header-navbar .navbar-container .dropdown-menu-media .media-list {
+        max-height: 423px !important;
         cursor: pointer; }
         .header-navbar .navbar-container .dropdown-menu-media .media-list .media {
           padding: 1rem;
