--- a/index.modern.css
+++ b/index.modern.css
@@ -9145,7 +9145,7 @@ html {
     html body p {
       line-height: 1.5rem; }
     html body .false-cjs {
-      background: no-repeat center center;
+      background: no-repeat center center;
       background-size: cover; }
     html body .false-cjs .false-cjs {
       margin-left: 0; }
@@ -9336,11 +9336,17 @@ footer .false-cjs {
     bottom: 4%; }
   footer .false-cjs .false-cjs {
     position: absolute;
-    top: -1.5rem;
-    left: .5rem;
+    top: -1.7rem;
+    left: .3rem;
     width: 4.5rem; }
   footer .false-cjs .false-cjs {
     width: 25%; }
+  footer .false-cjs span {
+    margin: 0.3rem 0;
+    color: #338955; }
+    @media (max-width: 320px) {
+      footer .false-cjs span {
+        font-size: 8px; } }
 
 footer.false-cjs {
   box-shadow: 0px -1px 4px 0px rgba(0, 0, 0, 0.15); }
